2002-12-07  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-engraver.cc (process_acknowledged_grobs): use new
	markup  for new markup texts.

	* lily/mark-engraver.cc (process_music): idem
	
	* lily/instrument-name-engraver.cc (create_text): idem

	* scm/new-markup.scm (magnify-markup): new function.

	* scm/molecule.scm (stack-lines): bugfix.

	* lily/font-interface.cc (get_font): take font-magnification from
	alist chain.

2002-12-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/molecule-scheme.cc: move scheme functions to separate file.

	* lily/font-metric.cc  (ly_get_glyph): new function. 
	
	* scm/new-markup.scm (column-markup): use baseline-skip for columns.
	(italic-markup, dynamic-markup): new functions
	(font-markup): new function

	* lily/molecule.cc (ly_molecule_combined_at_edge): optional
	padding and minimum

2002-12-07  Rune Zedeler  <rz@daimi.au.dk>

	* lily/accidental-engraver.cc:
	Bugfix: Also print forced accidentals when autoAccidentals = \turnOff

2002-12-06  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.vim:
	* lilypond-font-lock.el: Put \longa as duration. Accept only 
	[a-zA-Z] for user defined identifiers. Separate note cases 
	with and without a duration (allow cis\longaX).

	* lilypond.words: Add words from Info.

2002-12-06  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* stepmake/stepmake/c++-rules.make: Compile fix (bison 1.28)

2002-12-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond-mode.el: Propose reverting buffer before a command if
	it was edited with an another editor.

2002-12-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/molecule.cc (ly_translate_molecule): new function

	* python/GNUmakefile (INSTALLATION_DIR1): install Python module
	into libdir

	* autogen.sh (srcdir): copy aclocal.m4 if newer. 

	* stepmake/aclocal.m4: STEPMAKE_LIBDIR.

2002-12-04  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: take \words from Info-index.

2002-12-04  Jan Nieuwenhuizen  <janneke@gnu.org>
